--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,7 +1,11 @@
-{
-  "compilerOptions": {
-    "baseUrl": "src",
-    "allowJs": true
-  },
-  "include": ["src/**/*"]
-}
+// {
+//   "compilerOptions": {
+//     "baseUrl": ".",
+//     "paths": {
+//       "$libs": ["src/libs"],
+//       "$libs/*": ["src/libs/*"],
+//     }
+//   },
+//   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"],
+//   "exclude": ["node_modules", "**/node_modules", "dist"]
+// }
